PP-003 部品使用先一覧レポート 20241119

--- a/pp-s4apps01/zcomponentusagelist/webapp/view/Main.view.xml
+++ b/pp-s4apps01/zcomponentusagelist/webapp/view/Main.view.xml
@@ -17,6 +17,10 @@
         </f:title>
         <f:header>
             <f:DynamicPageHeader pinnable="true">
+                <!-- <f:content> 
+                    <CheckBox id = 'idCB1' text="{i18n>NoDisplayNonProduct}" width="11rem" select="onSelect"/> 
+                    <CheckBox id = 'idCB2' text="{i18n>DisplayPurchasingInfo}" width="11rem" select="onSelect"/> 
+                </f:content>  -->
                 <f:content> 
                     <FlexBox fitContainer="true">
                         <smartFilterBar:SmartFilterBar id="idSmartFilterBar" entitySet="ComponentUsageList" useToolbar="false" smartVariant="__SVM01" persistencyKey="StandardListSFB" initialized="onsMrilterBarInitialized">
@@ -25,8 +29,8 @@
                                 <smartFilterBar:ControlConfiguration index='20' key="BillOfMaterialComponent" visibleInAdvancedArea="true" label="{i18n>BillOfMaterialComponent}"/>
                                 <smartFilterBar:ControlConfiguration index='30' key="SupplierMaterialNumber" visibleInAdvancedArea="true" label="{i18n>SupplierMaterialNumber}"/>
                                 <smartFilterBar:ControlConfiguration index='40' key="ProductManufacturerNumber" visibleInAdvancedArea="true" label="{i18n>ProductManufacturerNumber}"/>
-                                <smartFilterBar:ControlConfiguration index='50' key="NoDisplayNonProduct" mandatory="mandatory" filterType="single" visibleInAdvancedArea="true" label="{i18n>NoDisplayNonProduct}"/>
-                                <smartFilterBar:ControlConfiguration index='60' key="DisplayPurchasingInfo" mandatory="mandatory" filterType="single" visibleInAdvancedArea="true" label="{i18n>DisplayPurchasingInfo}"/>
+                                <!-- <smartFilterBar:ControlConfiguration index='50' key="NoDisplayNonProduct" mandatory="mandatory" filterType="single" visibleInAdvancedArea="true" label="{i18n>NoDisplayNonProduct}"/>
+                                <smartFilterBar:ControlConfiguration index='60' key="DisplayPurchasingInfo" mandatory="mandatory" filterType="single" visibleInAdvancedArea="true" label="{i18n>DisplayPurchasingInfo}"/> -->
 
                                 <!-- visible -->
                                 <smartFilterBar:ControlConfiguration index='999' key="Material" visible="false"/>
@@ -47,6 +51,10 @@
                         </smartFilterBar:SmartFilterBar>
                     </FlexBox>
                 </f:content>
+                <f:content> 
+                    <CheckBox id = 'idCB1' text="{i18n>NoDisplayNonProduct}" width="11rem" select="onSelect"/> 
+                    <CheckBox id = 'idCB2' text="{i18n>DisplayPurchasingInfo}" width="11rem" select="onSelect"/> 
+                </f:content> 
             </f:DynamicPageHeader>
         </f:header>
         <f:content>
